# callbot-engine-refactor

./: RUST_PERFORMANCE_REPORT.md  benchmark_results.json  main.py  pyproject.toml  test_asr_triton.py
api/: server.py  server_v2.py  server_with_rust.py  websocket_utils.py  ws_utils.py
callbot_rust/: Cargo.toml  pyproject.toml
callbot_rust/src/: lib.rs
scripts/: benchmark_rust_vs_python.py  test_audio_streaming_receive.py  test_in_websocket.py  test_server_v2.sh
tests/: test_asr_triton.py  test_tts_triton.py
