[package]
name = "callbot_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "callbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
base64 = "0.22"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"  # For WAV file writing
